--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "axios": "^0.24.0",
-    "clsx": "^1.1.1",
+    "bootstrap-daterangepicker": "^3.1.0",
+    "clsx": "^1.2.0",
     "formik": "^2.2.9",
+    "jquery": "^3.6.0",
+    "moment": "^2.29.3",
     "next": "12.0.2",
-    "react": "17.0.2",
+    "react": "^18.2.0",
+    "react-bootstrap-daterangepicker": "^7.0.0",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-query": "^3.38.0",
